Bug 279300 - Whole event deleted for partial cancel email
Summary: Whole event deleted for partial cancel email
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: invitations (other bugs)
Version First Reported In: 4.4.10
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-03 15:32 UTC by Martin
Modified: 2013-10-26 16:08 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:


Attachments
Email with event series (2.46 KB, message/rfc822)
2011-08-03 15:32 UTC, Martin
Details
Email with partial cancelation (2.24 KB, message/rfc822)
2011-08-03 15:33 UTC, Martin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin 2011-08-03 15:32:33 UTC
Created attachment 62510 [details]
Email with event series

Version:           4.4.10 (using KDE 4.5.5) 
OS:                Linux

Update emails for recurring events, that communicate canceling of a single instance lead to deletion of whole event.

I attached example emails showing the problem.  The emails where produced by Outlook.

First I created an event recurring twice (first email), then I deleted the second instance of the event.  Outlook will update the event by deleting the second instance only, korganizer will delete the whole event.

Those emails can be copied to ~/kde/share/apps/korganizer/income.accepted/ to see the effect.

This is also the interface that kmail uses.  Receiving and accepting those emails in kmail, leads to the same problem.

Reproducible: Always

Steps to Reproduce:
1. cp Test.eml ~/.kde/share/apps/korganizer/income.accepted/
2. Event should be accepted in running korganizer (two instances)
3. cp Cancelel\:\ Test3.eml ~/.kde/share/apps/korganizer/income.accepted/
4. Whole event series is deleted in korganizer

Actual Results:  
Whole event series is deleted in korganizer

Expected Results:  
Only one instance of the event should be deleted, the other should remain in the calendar.

Happens also with korganizer 4.6.4 and 4.7
Comment 1 Martin 2011-08-03 15:33:21 UTC
Created attachment 62511 [details]
Email with partial cancelation
Comment 2 Stephan Diestelhorst 2011-08-03 15:45:17 UTC
Same thing here. I believe this is the reason for repeating meetings dropping out of my Calendar.. and I have been wondering where they went.

However, removing a single item manually by deletion through keyboard / mouse interaction works.
Comment 3 Michael Hohmuth 2011-08-03 16:47:02 UTC
I've run into this bug as well, with various versions of KOrganizer 3 and 4.
Comment 4 Sergio Martins 2013-10-26 15:23:54 UTC
Git commit d5b47505f51dd0aa97501eee821910c2f529a9e2 by Sergio Martins.
Committed on 26/10/2013 at 15:17.
Pushed by smartins into branch 'KDE/4.11'.

We now support accepting method=CANCEL with RECURENCE-ID.

Which means if you receive an invitation CANCEL for an individual
recurrence occurrence kontact won't delete your whole recurrence
series.

Unit test following.

M  +19   -3    akonadi/calendar/scheduler_p.cpp

http://commits.kde.org/kdepimlibs/d5b47505f51dd0aa97501eee821910c2f529a9e2
Comment 5 Sergio Martins 2013-10-26 15:34:38 UTC
Git commit 64fe90b597c49a29c1781c09b4184ea690826c05 by Sergio Martins.
Committed on 26/10/2013 at 15:33.
Pushed by smartins into branch 'master'.

Unit-test for when CANCEL is used with RECURRING-ID

A  +41   -0    akonadi/calendar/tests/itip_data/expected_data/cancel1
A  +22   -0    akonadi/calendar/tests/itip_data/invited_us_daily_cancel_recid01
M  +9    -0    akonadi/calendar/tests/itiphandlertest.cpp
M  +12   -1    akonadi/calendar/tests/unittestbase.cpp

http://commits.kde.org/kdepimlibs/64fe90b597c49a29c1781c09b4184ea690826c05