We now support accepting method=CANCEL with RECURENCE-ID.

Which means if you receive an invitation CANCEL for an individual
recurrence occurrence kontact won't delete your whole recurrence
series.

Unit test following.

BUG: 279300